# genki

./: .dockerignore  .gitignore  .travis.yml  Dockerfile  LICENSE  README.md  deploy_rsa.enc  docker-compose.db.yml  docker-compose.yml  manage.py  pyproject.toml  setup.cfg
.github/workflows/: ci-cd.yml
api/: urls.py  views.py
deployment/nginx/: Dockerfile  default.conf
deployment/scripts/: entrypoint.sh
genki/: asgi.py  models.py  settings.py  urls.py  validators.py  wsgi.py
genki/templates/: layout.html
genki/tests/: base.py  settings.py  test_models.py  test_validators.py
playthrough/: __init__.py  admin.py  apps.py  models.py  signals.py  utils.py  views.py
playthrough/management/commands/: migrate_dash.py  migrate_shogun.py
playthrough/migrations/: 0001_initial.py  0001_initial_models.py  0002_alias.py  0002_auto_20200521_1642.py  0002_channel_finished.py  0002_guild_admins.py  0003_auto_20200715_1839.py  0003_auto_20200718_1940.py  0003_auto_20201011_1604.py  0003_category_gameconfig.py  0004_auto_20200717_2112.py  0004_auto_20201011_1946.py  0004_game_prequels.py  0005_auto_20200715_1958.py  0005_metaroleconfig_guild.py  0006_auto_20200715_2040.py  0006_auto_20201011_2228.py  0007_game_playable.py  0008_auto_20201012_1652.py  0009_auto_20201014_2302.py  0010_auto_20201015_1402.py  0011_guild_name.py  0012_gameconfig_emoji.py
playthrough/tests/: __init__.py  test_commands.py  test_models.py  utils.py
playthrough/tests/fixtures/: dummy_archive.html  shogun_short.db
terminal/: auth.py  urls.py  views.py
terminal/templates/: index.html
terminal/templates/terminal/: archives.html  index.html
theme/static/css/: styles.css  styles.css.map
theme/static_src/: package-lock.json  package.json  tailwind.config.js
