[tool.poetry]
name = "genki"
version = "0.1.0"
description = "A Django-based Web Application to serve Discord chat archives and overall serve as a companion to a playthrough Discord server bot."
authors = ["Rain <Rain#8710>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.0.4"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"
pytest-django = "^3.8.0"
pytest-cov = "^2.8.1"
flake8 = "^3.7.9"
bandit = "^1.6.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
