[tool.poetry]
name = "genki"
version = "0.1.0"
description = "A Django-based Web Application to serve Discord chat archives and overall serve as a companion to a playthrough Discord server bot."
authors = ["Rain <rainmjp@gmail.com>"]
license = "MIT"
packages = [
    { include = "api" },
    { include = "genki" },
    { include = "playthrough" },
    { include = "terminal" },
    { include = "theme" },
]

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.0.6"
requests = "^2.28.0"
django-tailwind = "^3.3.0"
uWSGI = {version = "^2.0.20", optional = true}
psycopg2 = {version = "^2.9.3", optional = true}

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-django = "^4.5.2"
pytest-cov = "^3.0.0"
flake8 = "^4.0.1"
bandit = "^1.7.4"
black = {version = "^22.6.0", allow-prereleases = true}

[tool.poetry.extras]
deployment = ["psycopg2", "uwsgi"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
